[package]
name = "signals_rs"
version = "0.1.6"
authors = ["DevComp <hi@devcomp.xyz>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anymap = { path = "./utils/AnyMap" }
anyvec = { path = "./utils/AnyVec" }
logger = { path = "./utils/logger" }
rand = "0.8.5"


[features]
default = []
log = []
